# Yet-Another-EfficientDet-Pytorch

./: .gitignore  README.md  backbone.py  coco_eval.py  efficientdet_test.py  efficientdet_test_videos.py  pyproject.toml  readme.md  requirements.txt  setup.py  to_onnx.py  train.py
Yet_Another_EfficientDet_Pytorch/: __init__.py  backbone.py  coco_eval.py  efficientdet_test.py  efficientdet_test_videos.py  train.py
Yet_Another_EfficientDet_Pytorch/efficientdet/: loss.py  model.py
Yet_Another_EfficientDet_Pytorch/efficientnet/: utils_extra.py
Yet_Another_EfficientDet_Pytorch/tools/: to_onnx.py  to_tvm.py  validate.py  validate_onnx.py
Yet_Another_EfficientDet_Pytorch/utils/: utils.py
efficientdet/: model.py
efficientnet/: utils_extra.py
tools/: to_onnx.py  validate_onnx.py  weights_download.sh
