[project]
name = "Yet-Another-EfficientDet-Pytorch"
authors = ["zylo117", "mikeseven"]
description = "pytorch re-implement of the official EfficientDet"
readme = "readme.md"
requires-python = ">=3.9"
keywords = ["efficientdet", "object detection"]
license = {text = "LPGL-3"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | venv
  | build
)/
'''
line-length = 120

[tool.ruff]
line-length = 120
# Enable flake8-bugbear (`B`) rules.
# select = ["E", "F", "B"]
select = ["B", "C", "E", "F", "I", "W"]

# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
# unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
lines-after-imports = 2
multi_line_output = 3
use_parentheses = true
