[project]
name = "Yet_Another_EfficientDet_Pytorch"
authors = [{name="zylo117"}, {name="mikeseven"}]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["efficientdet", "object detection"]
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
#version='0.1.0'
dynamic = ["version"]
description = ""

[project.urls]
"Homepage" = "https://github.com/mikeseven/Yet-Another-EfficientDet-Pytorch"
"Bug Tracker" = "https://github.com/mikeseven/Yet-Another-EfficientDet-Pytorch/issues"


[tool.setuptools]
packages = ['Yet_Another_EfficientDet_Pytorch']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.hatch]
packages = ['Yet_Another_EfficientDet_Pytorch']

[tool.hatch.build]
include = [
  "Yet_Another_EfficientDet_Pytorch",
  "projects",
]
exclude = [
  ".gitignore",
  ".vscode",
]
[tool.hatch.version]
path = "Yet_Another_EfficientDet_Pytorch/__init__.py"

[tool.hatch.dynamic]
dependencies = {file = ["requirements.txt"]}

# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | venv
  | build
)/
'''
line-length = 120

[tool.ruff]
line-length = 120
# Enable flake8-bugbear (`B`) rules.
# select = ["E", "F", "B"]
select = ["B", "C", "E", "F", "I", "W"]

# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
# unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
lines-after-imports = 2
multi_line_output = 3
use_parentheses = true

